[tool.poetry]
name = "repl_python3_beta_games"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.4.3"
flask = "^1.1.2"
flask-migrate = "^2.5.3"
flask-sqlalchemy = "^2.4.4"
markupsafe = "^1.1.1"
sqlalchemy = "^1.3.19"
psycopg2-binary = "^2.7"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

